building the website phase 1.
Still need to update teaching and interests and the CV is wildly out of date, but some good progress has been made

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Phantom by HTML5 UP</title>
+		<title>Jonah Gannon</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -51,7 +51,7 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>Jonah Gannon's Personal Web Page<br />
+								<h1>Jonah Gannon's Personal Web Page</h1>
 								<p>Personal web page of the Astrophysicist Jonah Gannon</p>
 							</header>
 							<section class="tiles">
@@ -59,7 +59,7 @@
 									<span class="image">
 										<img src="images/pic01.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="Science_interests.html">
 										<h2>Interests - Scientific</h2>
 										<div class="content">
 											<p>A quick summary of my current interests.</p>
@@ -70,7 +70,7 @@
 									<span class="image">
 										<img src="images/pic02.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="cv.html">
 										<h2>CV</h2>
 										<div class="content">
 											<p>Download a copy of my CV here.</p>
@@ -93,9 +93,9 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Teaching</h2>
+										<h2>Interests - Personal</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>What I get up to when I'm not <strike> stargazing </strike> smashing my forehead against my laptop. </p>
 										</div>
 									</a>
 								</article>
@@ -104,9 +104,9 @@
 										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Aliquam</h2>
+										<h2>Publications</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>A list of publications I have been a part of.</p>
 										</div>
 									</a>
 								</article>
@@ -115,9 +115,9 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Veroeros</h2>
+										<h2>Current Location</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Current and past employment</p>
 										</div>
 									</a>
 								</article>
