--- a/index.html
+++ b/index.html
@@ -40,10 +40,12 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="generic.html">Ipsum veroeros</a></li>
-							<li><a href="generic.html">Tempus etiam</a></li>
-							<li><a href="generic.html">Consequat dolor</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="Science_interests.html">Interests - Science</a></li>
+							<li><a href="publications.html">Publications</a></li>
+							<li><a href="current_location.html">Current Location</a></li>
+							<li><a href="cv.html">CV</a></li>
+							<li><a href="teaching.html">Teaching</a></li>
+							<li><a href="personal_interests.html">Interests - Personal</a></li>
 						</ul>
 					</nav>
 
@@ -66,6 +68,29 @@
 										</div>
 									</a>
 								</article>
+								<article class="style5">
+									<span class="image">
+										<img src="images/pic05.jpg" alt="" />
+									</span>
+									<a href="generic.html">
+										<h2>Publications</h2>
+										<div class="content">
+											<p>A list of publications I have been a part of.</p>
+										</div>
+									</a>
+								</article>
+								<article class="style6">
+									<span class="image">
+										<img src="images/pic06.jpg" alt="" />
+									</span>
+									<a href="generic.html">
+										<h2>Current Location</h2>
+										<div class="content">
+											<p>Current and past employment</p>
+										</div>
+									</a>
+								</article>
+
 								<article class="style2">
 									<span class="image">
 										<img src="images/pic02.jpg" alt="" />
@@ -96,28 +121,6 @@
 										<h2>Interests - Personal</h2>
 										<div class="content">
 											<p>What I get up to when I'm not <strike> stargazing </strike> smashing my forehead against my laptop. </p>
-										</div>
-									</a>
-								</article>
-								<article class="style5">
-									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Publications</h2>
-										<div class="content">
-											<p>A list of publications I have been a part of.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style6">
-									<span class="image">
-										<img src="images/pic06.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Current Location</h2>
-										<div class="content">
-											<p>Current and past employment</p>
 										</div>
 									</a>
 								</article>
