--- a/publications.html
+++ b/publications.html
@@ -40,10 +40,12 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="generic.html">Ipsum veroeros</a></li>
-							<li><a href="generic.html">Tempus etiam</a></li>
-							<li><a href="generic.html">Consequat dolor</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="Science_interests.html">Interests - Science</a></li>
+							<li><a href="publications.html">Publications</a></li>
+							<li><a href="current_location.html">Current Location</a></li>
+							<li><a href="cv.html">CV</a></li>
+							<li><a href="teaching.html">Teaching</a></li>
+							<li><a href="personal_interests.html">Interests - Personal</a></li>
 						</ul>
 					</nav>
 
