--- a/cv.html
+++ b/cv.html
@@ -22,8 +22,9 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Phantom</span>
+									<span class="symbol"><img src="header_images/circle_rose.png" alt="" /></span><span class="title">Jonah Gannon - Astrophysicist</span>
 								</a>
+
 
 							<!-- Nav -->
 								<nav>
@@ -44,7 +45,7 @@
 							<li><a href="publications.html">Publications</a></li>
 							<li><a href="current_location.html">Current Location</a></li>
 							<li><a href="cv.html">CV</a></li>
-							<li><a href="teaching.html">Teaching</a></li>
+							<li><a href="resources.html">Resources</a></li>
 							<li><a href="personal_interests.html">Interests - Personal</a></li>
 						</ul>
 					</nav>
@@ -55,7 +56,7 @@
 							<h1>CV</h1>
 							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
 							<p>A copy of my CV is available <a
-								href="CV_Nov2018.pdf">here</a></p>
+								href="CVs/CV_Nov2018.pdf">here</a></p>
 							</div>
 					</div>
 
