--- a/resources.html
+++ b/resources.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Teaching</title>
+		<title>Resources</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,10 +20,11 @@
 					<header id="header">
 						<div class="inner">
 
-							<!-- Logo -->
+								<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Phantom</span>
+									<span class="symbol"><img src="header_images/circle_rose.png" alt="" /></span><span class="title">Jonah Gannon - Astrophysicist</span>
 								</a>
+
 
 							<!-- Nav -->
 								<nav>
@@ -44,7 +45,7 @@
 							<li><a href="publications.html">Publications</a></li>
 							<li><a href="current_location.html">Current Location</a></li>
 							<li><a href="cv.html">CV</a></li>
-							<li><a href="teaching.html">Teaching</a></li>
+							<li><a href="resources.html">Resources</a></li>
 							<li><a href="personal_interests.html">Interests - Personal</a></li>
 						</ul>
 					</nav>
@@ -52,9 +53,17 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>Teaching</h1>
+							<h1>Resources</h1>
 							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
-							<p>This page is created in anticipation of housing teaching materials for courses taught throughout an academic career. Currently it is a stub as teaching experience is limited to tutoring and lab demonstrating classes using others' materials.</p>
+
+							<h2>Released Code</h2>
+							<p>Any code I make public is available via my <a href="https://github.com/gannonjs/Published_Code">GitHub </a>. </p>
+
+							<h2>Released Data</h2>
+							<p>To get a copy of the data used in my papers please contact me via the email listed below. I will happily provide it for all reasonable requests made.</p>
+
+							<h2>Teaching</h2>
+							<p>This section is created in anticipation of housing teaching materials for courses taught throughout an academic career. Currently it is a stub as teaching experience is limited to tutoring and lab demonstrating classes using others' materials.</p>
 							</div>
 					</div>
 
