--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
 					<header id="header">
 						<div class="inner">
 
-							<!-- Logo -->
+								<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Phantom</span>
+									<span class="symbol"><img src="header_images/circle_rose.png" alt="" /></span><span class="title">Jonah Gannon - Astrophysicist</span>
 								</a>
+
 
 							<!-- Nav -->
 								<nav>
@@ -44,7 +45,7 @@
 							<li><a href="publications.html">Publications</a></li>
 							<li><a href="current_location.html">Current Location</a></li>
 							<li><a href="cv.html">CV</a></li>
-							<li><a href="teaching.html">Teaching</a></li>
+							<li><a href="resources.html">Resources</a></li>
 							<li><a href="personal_interests.html">Interests - Personal</a></li>
 						</ul>
 					</nav>
@@ -107,9 +108,9 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Teaching</h2>
+										<h2>Resources</h2>
 										<div class="content">
-											<p>A short collection of teaching resources.</p>
+											<p>A collection of released code, data and teaching resources.</p>
 										</div>
 									</a>
 								</article>
