--- a/personal_interests.html
+++ b/personal_interests.html
@@ -20,9 +20,9 @@
 					<header id="header">
 						<div class="inner">
 
-							<!-- Logo -->
+								<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Phantom</span>
+									<span class="symbol"><img src="header_images/circle_rose.png" alt="" /></span><span class="title">Jonah Gannon - Astrophysicist</span>
 								</a>
 
 							<!-- Nav -->
@@ -44,7 +44,7 @@
 							<li><a href="publications.html">Publications</a></li>
 							<li><a href="current_location.html">Current Location</a></li>
 							<li><a href="cv.html">CV</a></li>
-							<li><a href="teaching.html">Teaching</a></li>
+							<li><a href="resources.html">Resources</a></li>
 							<li><a href="personal_interests.html">Interests - Personal</a></li>
 						</ul>
 					</nav>
