added timeline to current location

--- a/cv.html
+++ b/cv.html
@@ -54,7 +54,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>CV</h1>
-							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
+							<span class="image main"><img src="header_images/header_galaxies_interact.png" alt="" /></span>
 							<p>A copy of my CV is available <a
 								href="CVs/CV_Nov2018.pdf">here</a></p>
 							</div>
