--- a/resources.html
+++ b/resources.html
@@ -54,7 +54,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Resources</h1>
-							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
+							<span class="image main"><img src="header_images/header_galaxies_interact.png" alt="" /></span>
 
 							<h2>Released Code</h2>
 							<p>Any code I make public is available via my <a href="https://github.com/gannonjs/Published_Code">GitHub </a>. </p>
