--- a/current_location.html
+++ b/current_location.html
@@ -4,9 +4,11 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
+
+
 <html>
 	<head>
-		<title>Generic - Phantom by HTML5 UP</title>
+		<title>Current Location</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -53,13 +55,40 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>Generic Page</h1>
-							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
-							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel venenatis mauris vehicula hendrerit.</p>
-							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+							<h1>Current Location</h1>
+							<span class="image main"><img src="header_images/header_galaxies_interact.png" alt="" /></span>
 						</div>
 					</div>
+
+				<div class="timeline">
+					<div class="container left">
+					<div class="content">
+					  <h2 style="color:white">2019 - Present</h2>
+					  <p style="color:white">PhD Student</p>
+						<p style="color:white">Swinburne University of Technology</p>
+						<p style="color:white">Melbourne, Australia</p>
+					</div>
+				  </div>
+
+					<div class="container right">
+					<div class="content">
+					  <h2 style="color:white">2016 - 2017</h2>
+					  <p style="color:white">Master of Physics (Astrophysics)</p>
+						<p style="color:white">The International Centre for Radio Astronomy Research</p>
+						<p style="color:white">Perth, Australia</p>
+					</div>
+				  </div>
+					<div class="container left">
+					<div class="content">
+					  <h2 style="color:white">2013 - 2016</h2>
+					  <p style="color:white">Bachelor of Science (Physics and Mathematics)</p>
+						<p style="color:white">The University of Western Australia</p>
+						<p style="color:white">Perth, Australia</p>
+					</div>
+				  </div>
+
+				</div>
+
 
 				<!-- Footer -->
 					<footer id="footer">
