--- a/publications.html
+++ b/publications.html
@@ -54,7 +54,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Publications</h1>
-							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
+							<span class="image main"><img src="header_images/header_galaxies_interact.png" alt="" /></span>
 							<p>A NASA/ADS list of my publications is available <a href="https://ui.adsabs.harvard.edu/search/filter_author_facet_hier_fq_author=OR&filter_author_facet_hier_fq_author=author_facet_hier%3A%221%2FGannon%2C%20J%2FGannon%2C%20Jonah%22&filter_author_facet_hier_fq_author=author_facet_hier%3A%221%2FGannon%2C%20J%2FGannon%2C%20Jonah%20S%22&fq=%7B!type%3Daqp%20v%3D%24fq_author%7D&fq_author=(author_facet_hier%3A%221%2FGannon%2C%20J%2FGannon%2C%20Jonah%22%20OR%20author_facet_hier%3A%221%2FGannon%2C%20J%2FGannon%2C%20Jonah%20S%22)&q=author%3A%22Gannon%2C%20Jonah%20S.%22&sort=date%20desc%2C%20bibcode%20desc&p_=0">here</a>. </p>
 
 							<p>My Google Scholar listing is <a href="https://scholar.google.com/citations?user=RFv6n5MAAAAJ&hl=en">here</a>.</p>
