--- a/index.html
+++ b/index.html
@@ -153,11 +153,12 @@
 									</ul>
 								</form>
 							</section>
+
 							<section>
 								<h2>Contact Me</h2>
 								<ul class="icons">
-									<li><a href="#" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="#" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
+									<li><a href="https://github.com/gannonjs" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="mailto:jonah.gannon@gmail.com" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
 								</ul>
 							</section>
 							<ul class="copyright">
