--- a/index.html
+++ b/index.html
@@ -54,8 +54,11 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>Jonah Gannon's Personal Web Page</h1>
-								<p>Personal web page of the Astrophysicist Jonah Gannon</p>
+								<h1 style="text-align:center;">Jonah Gannon - Astrophysicist</h1>
+								<center><img src="header_images/me_circle.png" alt="me_circle">
+								<b style="text-align:center;"> <br> Hi, I'm Jonah! </b>
+								<b style="text-align:center;"> <br> I'm an astrophsicist currently studying at Swinburne University of Technology in Melbourne, Australia. </b>
+								<p style="text-align:center;"> <br> Feel free to look around and please get in touch if you have any questions. </p>
 							</header>
 							<section class="tiles">
 								<article class="style1">
@@ -84,7 +87,7 @@
 									<span class="image">
 										<img src="images/pic06.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="current_location.html">
 										<h2>Current Location</h2>
 										<div class="content">
 											<p>Current and past employment</p>
@@ -136,22 +139,25 @@
 						<div class="inner">
 							<section>
 								<h2>Get in touch</h2>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<input type="text" name="name" id="name" placeholder="Name" />
+							<form id="fcf-form-id" class="fcf-form-class" method="post" action="assets/form_sender.php">
+										<label for="Name" class="fcf-form-class">Your name</label>
+										<div class="fcf-input-group">
+											<input type="text" id="Name" name="Name" class="fcf-form-control" required>
 										</div>
-										<div class="field half">
-											<input type="email" name="email" id="email" placeholder="Email" />
+									<div class="fcf-form-group">
+										<label for="Email" class="fcf-label">Your email address</label>
+										<div class="fcf-input-group">
+											<input type="email" id="Email" name="Email" class="fcf-form-control" required>
 										</div>
-										<div class="field">
-											<textarea name="message" id="message" placeholder="Message"></textarea>
+									<div class="fcf-form-group">
+										<label for="Message" class="fcf-label">Your message</label>
+										<div class="fcf-input-group">
+											<textarea id="Message" name="Message" class="fcf-form-control" rows="6" maxlength="3000" required></textarea>
 										</div>
 									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send" class="primary" /></li>
-									</ul>
-								</form>
+									<div class="fcf-form-group">
+										<button type="submit" id="fcf-button" class="fcf-btn fcf-btn-primary fcf-btn-lg fcf-btn-block">Send</button>
+									</div>
 							</section>
 
 							<section>
