--- a/index.html
+++ b/index.html
@@ -55,9 +55,13 @@
 						<div class="inner">
 							<header>
 								<h1 style="text-align:center;">Jonah Gannon - Astrophysicist</h1>
-								<center><img src="header_images/me_circle.png" alt="me_circle">
-								<b style="text-align:center;"> <br> Hi, I'm Jonah! </b>
-								<b style="text-align:center;"> <br> I'm an astrophsicist currently studying at Swinburne University of Technology in Melbourne, Australia. </b>
+
+								<center>
+									<img src="header_images/me_circle.png" alt="me_circle">
+									<b style="text-align:center;"> <br> Hi, I'm Jonah! </b>
+									<b style="text-align:center;"> <br> I'm an astrophsicist currently studying at Swinburne University of Technology in Melbourne, Australia. </b>
+ 								</center>
+
 								<p style="text-align:center;"> <br> Feel free to look around and please get in touch if you have any questions. </p>
 							</header>
 							<section class="tiles">
@@ -139,25 +143,28 @@
 						<div class="inner">
 							<section>
 								<h2>Get in touch</h2>
-							<form id="fcf-form-id" class="fcf-form-class" method="post" action="assets/form_sender.php">
-										<label for="Name" class="fcf-form-class">Your name</label>
-										<div class="fcf-input-group">
-											<input type="text" id="Name" name="Name" class="fcf-form-control" required>
+								<form id="fcf-form-id" class="fcf-form-class" method="post" action="assets/form_sender.php">
+											<label for="Name" class="fcf-form-class">Your name</label>
+											<div class="fcf-input-group">
+												<input type="text" id="Name" name="Name" class="fcf-form-control" required>
+											</div>
+										<div class="fcf-form-group">
+											<label for="Email" class="fcf-label">Your email address</label>
+											<div class="fcf-input-group">
+												<input type="email" id="Email" name="Email" class="fcf-form-control" required>
+											</div>
 										</div>
-									<div class="fcf-form-group">
-										<label for="Email" class="fcf-label">Your email address</label>
-										<div class="fcf-input-group">
-											<input type="email" id="Email" name="Email" class="fcf-form-control" required>
+
+										<div class="fcf-form-group">
+											<label for="Message" class="fcf-label">Your message</label>
+											<div class="fcf-input-group">
+												<textarea id="Message" name="Message" class="fcf-form-control" rows="6" maxlength="3000" required></textarea>
+											</div>
 										</div>
-									<div class="fcf-form-group">
-										<label for="Message" class="fcf-label">Your message</label>
-										<div class="fcf-input-group">
-											<textarea id="Message" name="Message" class="fcf-form-control" rows="6" maxlength="3000" required></textarea>
+
+										<div class="fcf-form-group">
+											<button type="submit" id="fcf-button" class="fcf-btn fcf-btn-primary fcf-btn-lg fcf-btn-block">Send</button>
 										</div>
-									</div>
-									<div class="fcf-form-group">
-										<button type="submit" id="fcf-button" class="fcf-btn fcf-btn-primary fcf-btn-lg fcf-btn-block">Send</button>
-									</div>
 							</section>
 
 							<section>
