End of night 21/6/21 fixed footers and index hyperlinks to finish

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 									<span class="image">
 										<img src="images/pic05.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="publications.html">
 										<h2>Publications</h2>
 										<div class="content">
 											<p>A list of publications I have been a part of.</p>
@@ -114,7 +114,7 @@
 									<span class="image">
 										<img src="images/pic03.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="resources.html">
 										<h2>Resources</h2>
 										<div class="content">
 											<p>A collection of released code, data and teaching resources.</p>
@@ -125,7 +125,7 @@
 									<span class="image">
 										<img src="images/pic04.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="personal_interests.html">
 										<h2>Interests - Personal</h2>
 										<div class="content">
 											<p>What I get up to when I'm not <strike> stargazing </strike> smashing my forehead against my laptop. </p>
@@ -142,36 +142,11 @@
 					<footer id="footer">
 						<div class="inner">
 							<section>
-								<h2>Get in touch</h2>
-								<form id="fcf-form-id" class="fcf-form-class" method="post" action="assets/form_sender.php">
-											<label for="Name" class="fcf-form-class">Your name</label>
-											<div class="fcf-input-group">
-												<input type="text" id="Name" name="Name" class="fcf-form-control" required>
-											</div>
-										<div class="fcf-form-group">
-											<label for="Email" class="fcf-label">Your email address</label>
-											<div class="fcf-input-group">
-												<input type="email" id="Email" name="Email" class="fcf-form-control" required>
-											</div>
-										</div>
-
-										<div class="fcf-form-group">
-											<label for="Message" class="fcf-label">Your message</label>
-											<div class="fcf-input-group">
-												<textarea id="Message" name="Message" class="fcf-form-control" rows="6" maxlength="3000" required></textarea>
-											</div>
-										</div>
-
-										<div class="fcf-form-group">
-											<button type="submit" id="fcf-button" class="fcf-btn fcf-btn-primary fcf-btn-lg fcf-btn-block">Send</button>
-										</div>
-							</section>
-
-							<section>
 								<h2>Contact Me</h2>
 								<ul class="icons">
-									<li><a href="https://github.com/gannonjs" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
 									<li><a href="mailto:jonah.gannon@gmail.com" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
+									<li><a href="https://github.com/gannonjs" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://www.linkedin.com/in/jonahgannon/" class="icon brands style2 fa-linkedin"><span class="label">Email</span></a></li>
 								</ul>
 							</section>
 							<ul class="copyright">
