--- a/personal_interests.html
+++ b/personal_interests.html
@@ -54,9 +54,68 @@
 						<div class="inner">
 							<h1>Personal Interests</h1>
 							<span class="image main"><img src="header_images/header_galaxies_interact.png" alt="" /></span>
-							<p>Words Needed.</p>
+<!--							<p>Words Needed.</p>-->
 							</div>
 					</div>
+
+				<!-- Container for the image gallery -->
+					<div class="slide_container">
+
+					  <!-- Full-width images with number text -->
+					  <div class="mySlides">
+						<div class="numbertext">1 / 5</div>
+						  <img src="personal_images/run.jpg" style="width:100%">
+					  </div>
+
+					  <div class="mySlides">
+						<div class="numbertext">2 / 5</div>
+						  <img src="personal_images/cricket.jpg" style="width:100%">
+					  </div>
+
+					  <div class="mySlides">
+						<div class="numbertext">3 / 5</div>
+						  <img src="personal_images/chess.jpeg" style="width:100%">
+					  </div>
+
+					  <div class="mySlides">
+						<div class="numbertext">4 / 5</div>
+						  <img src="personal_images/pun.jpg" style="width:100%">
+					  </div>
+
+					  <div class="mySlides">
+						<div class="numbertext">5 / 5</div>
+						  <img src="personal_images/parma.jpg" style="width:100%">
+					  </div>
+					  <!-- Next and previous buttons -->
+					  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+					  <a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+					  <!-- Image text -->
+					  <div class="caption-container">
+						<p id="caption"></p>
+					  </div>
+
+					  <!-- Thumbnail images -->
+					  <div class="row">
+						<div class="column">
+						  <img class="demo cursor" src="personal_images/run.jpg" style="width:100%" onclick="currentSlide(1)" alt="<b>Running</b> <br> I find running a great way to explore around and meet new people.<br> Currently running with The Hawthorn Triathlon Club/The De Castella Runners (pictured). ">
+						</div>
+						<div class="column">
+						  <img class="demo cursor" src="personal_images/cricket.jpg" style="width:100%" onclick="currentSlide(2)" alt="<b>Cricket</b> <br> Everyone has their sport - cricket is mine. Ex-WGCC player (pictured). <br>I follow the mens/womens teams out of Western Australia (and our national teams).">
+						</div>
+						<div class="column">
+						  <img class="demo cursor" src="personal_images/chess.jpeg" style="width:100%" onclick="currentSlide(3)" alt="<b>Chess</b> <br> Somehow thinking through chess problems helps me think through astronomy problems.">
+						</div>
+						<div class="column">
+						  <img class="demo cursor" src="personal_images/pun.jpg" style="width:100%" onclick="currentSlide(4)" alt="<b>Bad Puns</b> <br> Puns, like the rotation of the Earth, make my day. <br>  ">
+						</div>
+						<div class="column">
+						  <img class="demo cursor" src="personal_images/parma.jpg" style="width:100%" onclick="currentSlide(5)" alt="<b>Quizzes</b> <br> (Bonus points if at a Pub) <br> I would also like to promise that not all of my knowledge is trivial.">
+						</div>
+					  </div>
+					</div>
+
+
 
 				<!-- Footer -->
 					<footer id="footer">
@@ -83,6 +142,6 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-
+			<script src="assets/js/slideshow.js"></script>
 	</body>
 </html>
