--- a/Science_interests.html
+++ b/Science_interests.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Generic - Phantom by HTML5 UP</title>
+		<title>Science Interests</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -54,8 +54,66 @@
 						<div class="inner">
 							<h1>Scientific Interests</h1>
 							<span class="image main"><img src="header_images/header_galaxies_interact.png" alt="" /></span>
-							<p>Words Needed</p>
+<!--							<p>Words Needed</p>-->
 						</div>
+					</div>
+
+
+				<!-- Container for the image gallery -->
+					<div class="slide_container">
+
+					  <!-- Full-width images with number text -->
+					  <div class="mySlides">
+						<div class="numbertext">1 / 5</div>
+						  <img src="science_images/udg.jpg" style="width:100%">
+					  </div>
+
+					  <div class="mySlides">
+						<div class="numbertext">2 / 5</div>
+						  <img src="science_images/keck.jpg" style="width:100%">
+					  </div>
+
+					  <div class="mySlides">
+						<div class="numbertext">3 / 5</div>
+						  <img src="science_images/shells.jpg" style="width:100%">
+					  </div>
+
+					  <div class="mySlides">
+						<div class="numbertext">4 / 5</div>
+						  <img src="science_images/darkmatter.jpg" style="width:100%">
+					  </div>
+
+					  <div class="mySlides">
+						<div class="numbertext">5 / 5</div>
+						  <img src="science_images/M13_crop.jpg" style="width:100%">
+					  </div>
+					  <!-- Next and previous buttons -->
+					  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+					  <a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+					  <!-- Image text -->
+					  <div class="caption-container">
+						<p id="caption"></p>
+					  </div>
+
+					  <!-- Thumbnail images -->
+					  <div class="row">
+						<div class="column">
+						  <img class="demo cursor" src="science_images/udg.jpg" style="width:100%" onclick="currentSlide(1)" alt="<b>Ultra-Diffuse Galaxies</b> <br> My primary work focusses on the formation and evolution of large, low surface brightness galaxies called Ultra-Diffuse Galaxies (UDGs). I am currently placing observational constraints on their masses to help our understanding of the dark matter halos they form in. ">
+						</div>
+						<div class="column">
+						  <img class="demo cursor" src="science_images/keck.jpg" style="width:100%" onclick="currentSlide(2)" alt="<b>Low Surface Brightness Instrumentation</b> <br> We can only study the parts of the Universe we are able to see. Through developing new image reduction techniques I hope to expand the frontiers of modern astronomy.">
+						</div>
+						<div class="column">
+						  <img class="demo cursor" src="science_images/shells.jpg" style="width:100%" onclick="currentSlide(3)" alt="<b>Galaxy Halos</b> <br> In the modern understanding of galaxy formation, galaxies grow through accretion and merging. We study these process through the imprints they leave that are embedded in the galaxy's stellar halos.">
+						</div>
+						<div class="column">
+						  <img class="demo cursor" src="science_images/darkmatter.jpg" style="width:100%" onclick="currentSlide(4)" alt="<b>Dark Matter</b> <br> Dark matter comprises roughly 27% of the Universe today. Through studying low surface brightness structure in the Universe I hope to place observational constraints to better our understanding of dark matter.">
+						</div>
+						<div class="column">
+						  <img class="demo cursor" src="science_images/M13_crop.jpg" style="width:100%" onclick="currentSlide(5)" alt="<b>Globular Clusters</b> <br> Globular clusters are small balls of hundreds of thousands to millions of stars. Globular clusters are important probes of galaxy formation and evolution and can be used to trace galaxy properties out to large radius.">
+						</div>
+					  </div>
 					</div>
 
 				<!-- Footer -->
@@ -83,6 +141,6 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-
+			<script src="assets/js/slideshow.js"></script>
 	</body>
 </html>
