fixed interest sizing

--- a/Science_interests.html
+++ b/Science_interests.html
@@ -54,13 +54,13 @@
 						<div class="inner">
 							<h1>Scientific Interests</h1>
 							<span class="image main"><img src="header_images/header_galaxies_interact.png" alt="" /></span>
-<!--							<p>Words Needed</p>-->
 						</div>
 					</div>
 
 
 				<!-- Container for the image gallery -->
-					<div class="slide_container">
+				<center>
+					<div class="slide_container" style = "width:1000px">
 
 					  <!-- Full-width images with number text -->
 					  <div class="mySlides">
@@ -115,6 +115,7 @@
 						</div>
 					  </div>
 					</div>
+				</center>
 
 				<!-- Footer -->
 					<footer id="footer">
