--- a/personal_interests.html
+++ b/personal_interests.html
@@ -54,12 +54,12 @@
 						<div class="inner">
 							<h1>Personal Interests</h1>
 							<span class="image main"><img src="header_images/header_galaxies_interact.png" alt="" /></span>
-<!--							<p>Words Needed.</p>-->
 							</div>
 					</div>
 
 				<!-- Container for the image gallery -->
-					<div class="slide_container">
+				<center>
+					<div class="slide_container" style = "width:1000px">
 
 					  <!-- Full-width images with number text -->
 					  <div class="mySlides">
@@ -114,7 +114,7 @@
 						</div>
 					  </div>
 					</div>
-
+				</center>
 
 
 				<!-- Footer -->
