fixed slideshow sizing on phones

--- a/personal_interests.html
+++ b/personal_interests.html
@@ -59,7 +59,7 @@
 
 				<!-- Container for the image gallery -->
 				<center>
-					<div class="slide_container" style = "width:1000px">
+					<div class="slide_container" style = "width:55%">
 
 					  <!-- Full-width images with number text -->
 					  <div class="mySlides">
