--- a/current_location.html
+++ b/current_location.html
@@ -62,8 +62,17 @@
 
 				<div class="timeline">
 					<div class="container left">
+						<div class="content">
+						  <h2 style="color:white">2022 - Present</h2>
+						  <p style="color:white">Director's Research Fellow</p>
+							<p style="color:white">Swinburne University of Technology</p>
+							<p style="color:white">Melbourne, Australia</p>
+						</div>
+					  </div>
+
+					<div class="container left">
 					<div class="content">
-					  <h2 style="color:white">2019 - Present</h2>
+					  <h2 style="color:white">2019 - 2022</h2>
 					  <p style="color:white">PhD Student</p>
 						<p style="color:white">Swinburne University of Technology</p>
 						<p style="color:white">Melbourne, Australia</p>
