--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 								<center>
 									<img src="header_images/me_circle.png" alt="me_circle">
 									<b style="text-align:center;"> <br> Hi, I'm Jonah! </b>
-									<b style="text-align:center;"> <br> I'm an astrophsicist currently studying at Swinburne University of Technology in Melbourne, Australia. </b>
+									<b style="text-align:center;"> <br> I'm an astrophsicist currently working at Swinburne University of Technology in Melbourne, Australia. </b>
  								</center>
 
 								<p style="text-align:center;"> <br> Feel free to look around and please get in touch if you have any questions. </p>
@@ -128,7 +128,7 @@
 									<a href="personal_interests.html">
 										<h2>Interests - Personal</h2>
 										<div class="content">
-											<p>What I get up to when I'm not <strike> stargazing </strike> smashing my forehead against my laptop. </p>
+											<p>What I get up to when I'm not stargazing. </p>
 										</div>
 									</a>
 								</article>
@@ -150,7 +150,7 @@
 								</ul>
 							</section>
 							<ul class="copyright">
-								<li>&copy; Jonah Gannon (2021). All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Jonah Gannon (2023). All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</footer>
