changed container to right

--- a/current_location.html
+++ b/current_location.html
@@ -61,7 +61,7 @@
 					</div>
 
 				<div class="timeline">
-					<div class="container left">
+					<div class="container right">
 						<div class="content">
 						  <h2 style="color:white">2022 - Present</h2>
 						  <p style="color:white">Director's Research Fellow</p>
